# Test_task_Infotecs

./: CMakeLists.txt  README.md  integrator.cpp  integrator.h  main.cpp
Client/: CMakeLists.txt  client.cpp  client.h  integrator.cpp  integrator.h  main.cpp
Server/: CMakeLists.txt  ConsoleReader.h  main.cpp  server.cpp  server.h
